[package]
name = "steam-currently-playing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.6.0"
handlebars = { version = "5.1.2", features = ["dir_source"] }
env_logger = "0.11.3"
log = "0.4.21"
dotenvy = "0.15.7"
serde_json = "1.0.117"
steam-rs = "0.4.4"
